# tcconv

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/profile/: generic.rs  mod.rs
test/: ColorSchemes.xcs  alacritty.yml  settings.json
