[package]
name = "tcconv"
version = "0.1.0"
authors = ["Predmet Chen <chengongpp@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
toml = "0.5"
encoding_rs = "0.8"
chardetng = "0.1"
clap = "2.33.3"
log = "0.4.14"