[package]
name = "tcconv"
version = "0.1.0"
authors = ["Predmet Chen <chengongpp@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
rust-ini = "0.17"
encoding_rs = "0.8"
chardetng = "0.1"
clap = "3.0"